@@ -5495,7 +5495,34 @@ string line 2\"
           ( @( get$(str$(chr$127),MEM,ML)
              : chr$127 chr$127
              )
-          | Out$877
+          | Out$878
+          )
+          ( a^(b+c+d+e)*f^(g+h):?*?^(%+[<3)*?
+          | Out$879
+          )
+          (   a^(b+c)*f^g:?*?_(%+[<2)*?
+            & a^(b+c)*f^g:?*?_(%+[2)*?
+            & a^(b+c)*f^g:?*?_(%+[1)*?
+            & a^(b+c)*f^g:?*?_(%+[>1)*?
+          | Out$880
+          )
+          (   ( a^(b+c)*f^g:?*?_(%+[<1)*?
+              | a^(b+c)*f^g:?*?_(%+[>2)*?
+              )
+            & Out$881
+          | 
+          )
+          (   (a.b c) (f.g):? (?.% [<2) ?
+            & (a.b c) (f.g):? (?.% [2) ?
+            & (a.b c) (f.g):? (?.% [1) ?
+            & (a.b c) (f.g):? (?.% [>1) ?
+          | Out$882
+          )
+          (   ( (a.b c) (f.g):? (?.% [<1) ?
+              | (a.b c) (f.g):? (?.% [>2) ?
+              )
+            & Out$883
+          | 
           )
       &   out
         $ ( str
